contact link is added

--- a/idex.html
+++ b/idex.html
@@ -50,7 +50,7 @@
                     <P>Full stack developer with a strong background in Java, proficient in building dynamic web applications. Skilled in frontend frameworks, backend services, and databases. Passionate about solving complex challenges, writing clean code, and continuously learning emerging technologies to stay ahead in development.</P>
                     <div class="btn-group">
                         <a href="#" class="btn active">Download CV</a>
-                        <a href="#" class="btn">contact</a>
+                        <a href="#contactPage" class="btn">contact</a>
                     </div>
                         
                     <div class="social">
